--- a/app/src/main/res/layout/item_p2_system.xml
+++ b/app/src/main/res/layout/item_p2_system.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/dimen_340_dip"
     android:layout_height="@dimen/dimen_180_dip">
 
@@ -12,6 +14,19 @@
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/app_name"
         android:scaleType="fitXY"
+        android:background="@drawable/p2_car_body_normal"
         />
+
+    <TextView
+        android:id="@+id/tv_wifi_name"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/dimen_20_dip"
+        android:textSize="@dimen/dimen_15_sp"
+        android:text="JG-VDB-II-Verano_ECU-0021"
+        android:textColor="@android:color/white"
+        android:layout_marginBottom="@dimen/dimen_15_dip"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="@dimen/dimen_15_dip" />
 
 </android.support.constraint.ConstraintLayout>
