--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/app_title_name"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_29_dip"
+        android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textColor="#989DAC"
         android:textSize="@dimen/dimen_20_sp"
@@ -29,21 +29,21 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/dimen_8_dip" />
 
-    <android.support.v7.widget.RecyclerView
+    <com.wp.car_breakdown_train.view.MarqueeView
         android:id="@+id/home_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_300_dip"
+        android:layout_height="@dimen/dimen_270_dip"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="@dimen/dimen_50_dip"
         app:layout_constraintTop_toBottomOf="@+id/app_title_name">
-    </android.support.v7.widget.RecyclerView>
+    </com.wp.car_breakdown_train.view.MarqueeView>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_view_circle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_0.5_dip"
+        android:layout_marginTop="@dimen/dimen_40_dip"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_recycle_view"
@@ -58,8 +58,8 @@
         android:text="进 入"
         android:onClick="jumpInto"
         android:textSize="@dimen/dimen_18_sp"
-        android:textColor="#3FA2FF"
-        android:background="@drawable/shape_rest"
+        android:textColor="@drawable/item_text_selector"
+        android:background="@drawable/btn_sytle"
         app:layout_constraintTop_toBottomOf="@+id/recycle_view_circle"
         android:layout_marginTop="@dimen/dimen_50_dip"
         app:layout_constraintLeft_toLeftOf="parent"
