--- a/app/src/main/res/layout/activity_page2.xml
+++ b/app/src/main/res/layout/activity_page2.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/app_title_name"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_29_dip"
+        android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textColor="#989DAC"
         android:textSize="@dimen/dimen_20_sp"
@@ -35,7 +35,7 @@
         android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="@dimen/dimen_30_dip"
+        android:layout_marginTop="@dimen/dimen_35_dip"
         app:layout_constraintTop_toBottomOf="@+id/app_title_name">
     </android.support.v7.widget.RecyclerView>
 
