--- a/app/src/main/res/layout/activity_page3.xml
+++ b/app/src/main/res/layout/activity_page3.xml
@@ -25,14 +25,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="@dimen/dimen_10_dip"
-        android:layout_marginTop="@dimen/dimen_8_dip" />
+        android:layout_marginTop="@dimen/dimen_15_dip" />
 
     <TextView
         android:id="@+id/app_title_name"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_30_dip"
+        android:layout_height="wrap_content"
         android:textColor="#989DAC"
-        android:textSize="@dimen/dimen_16_sp"
+        android:textSize="@dimen/dimen_15_sp"
+        android:paddingRight="@dimen/dimen_25_dip"
+        android:paddingLeft="@dimen/dimen_30_dip"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="@dimen/dimen_10_dip"
-        android:layout_marginTop="@dimen/dimen_8_dip" />
+        android:layout_marginTop="@dimen/dimen_15_dip" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_view_system"
@@ -54,7 +56,7 @@
         android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="@dimen/dimen_35_dip"
+        android:layout_marginTop="@dimen/dimen_50_dip"
         app:layout_constraintTop_toBottomOf="@+id/app_title_name">
     </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
