--- a/app/src/main/res/layout/item_p2_system.xml
+++ b/app/src/main/res/layout/item_p2_system.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/tv_wifi_name"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_20_dip"
+        android:layout_height="wrap_content"
         android:textSize="@dimen/dimen_15_sp"
         android:text="JG-VDB-II-Verano_ECU-0021"
         android:textColor="@android:color/white"
