--- a/app/src/main/res/layout/item_p4_pin.xml
+++ b/app/src/main/res/layout/item_p4_pin.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/dimen_340_dip"
-    android:layout_height="@dimen/dimen_180_dip">
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/dimen_200_dip"
+    android:maxHeight="@dimen/dimen_300_dip">
 
     <ImageView
         android:id="@+id/iv_p4_pin"
@@ -18,11 +20,12 @@
     <TextView
         android:id="@+id/tv_pin_name"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_29_dip"
+        android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/dimen_18_sp"
-        android:gravity="center"
+        android:textSize="@dimen/dimen_16_sp"
+        android:gravity="left"
         android:layout_marginTop="@dimen/dimen_8_dip"
+        android:paddingRight="@dimen/dimen_10_dip"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/dimen_8_dip" />
@@ -30,7 +33,7 @@
     <TextView
         android:id="@+id/tv_pID_1"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_20_dip"
+        android:layout_height="wrap_content"
         android:textColor="@color/color_btn_cancel"
         android:textSize="@dimen/dimen_15_sp"
         android:text="器件针脚号"
@@ -52,7 +55,7 @@
     <TextView
         android:id="@+id/tv_pID"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_20_dip"
+        android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textSize="@dimen/dimen_15_sp"
         android:gravity="center"
@@ -64,7 +67,7 @@
     <TextView
         android:id="@+id/tv_cID_1"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_20_dip"
+        android:layout_height="wrap_content"
         android:textColor="@color/color_btn_cancel"
         android:textSize="@dimen/dimen_15_sp"
         android:text="对应电脑针脚号"
@@ -78,7 +81,7 @@
         android:layout_width="@dimen/dimen_30_dip"
         android:layout_height="@dimen/dimen_30_dip"
         app:layout_constraintTop_toBottomOf="@+id/tv_pID"
-        android:layout_marginTop="@dimen/dimen_5_dip"
+        android:layout_marginTop="@dimen/dimen_10_dip"
         app:layout_constraintStart_toEndOf="@id/tv_cID_1"
         android:scaleType="fitXY"
         />
@@ -86,7 +89,7 @@
     <TextView
         android:id="@+id/tv_cID"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_20_dip"
+        android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textSize="@dimen/dimen_15_sp"
         android:gravity="center"
@@ -104,6 +107,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="@dimen/dimen_20_dip"
+        app:layout_constraintTop_toBottomOf="@+id/tv_cID"
+        android:layout_marginTop="@dimen/dimen_30_dip"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/dimen_30_dip" />
 
@@ -114,6 +119,8 @@
         android:text="连接"
         android:textColor="@color/color_circle_2"
         android:textSize="@dimen/dimen_15_sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_cID"
+        android:layout_marginTop="@dimen/dimen_30_dip"
         android:layout_marginBottom="@dimen/dimen_20_dip"
         android:layout_marginStart="@dimen/dimen_5_dip"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -125,11 +132,13 @@
         android:layout_height="@dimen/dimen_20_dip"
         android:checked="false"
         android:button="@null"
+        app:layout_constraintTop_toBottomOf="@+id/tv_cID"
+        android:layout_marginTop="@dimen/dimen_30_dip"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="@dimen/dimen_20_dip"
         app:layout_constraintStart_toEndOf="@+id/tv_conn"
-        android:layout_marginStart="@dimen/dimen_60_dip" />
+        android:layout_marginStart="@dimen/dimen_50_dip" />
 
     <TextView
         android:id="@+id/tv_cut_off"
@@ -138,6 +147,8 @@
         android:text="断开"
         android:textColor="@color/color_circle_2"
         android:textSize="@dimen/dimen_15_sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_cID"
+        android:layout_marginTop="@dimen/dimen_30_dip"
         android:layout_marginBottom="@dimen/dimen_20_dip"
         android:layout_marginStart="@dimen/dimen_5_dip"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -149,11 +160,13 @@
         android:layout_height="@dimen/dimen_20_dip"
         android:checked="false"
         android:button="@null"
+        app:layout_constraintTop_toBottomOf="@+id/tv_cID"
+        android:layout_marginTop="@dimen/dimen_30_dip"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="@dimen/dimen_20_dip"
         app:layout_constraintStart_toEndOf="@+id/tv_cut_off"
-        android:layout_marginStart="@dimen/dimen_60_dip" />
+        android:layout_marginStart="@dimen/dimen_50_dip" />
 
     <TextView
         android:id="@+id/tv_bonding"
@@ -162,6 +175,8 @@
         android:text="搭铁"
         android:textColor="@color/color_circle_2"
         android:textSize="@dimen/dimen_15_sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_cID"
+        android:layout_marginTop="@dimen/dimen_30_dip"
         android:layout_marginBottom="@dimen/dimen_20_dip"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="@dimen/dimen_5_dip"
