--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="@dimen/dimen_150_dip"
         android:layout_height="@dimen/dimen_110_dip"
-        android:background="@drawable/loading_bg"
+        android:background="@drawable/shape_loading_bg"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="@dimen/dimen_10_dip"
